--- a/prj1/style.css
+++ b/prj1/style.css
@@ -92,6 +92,7 @@ h1,h2,h3,h4,h5,h6{
     justify-content: space-between;
     align-items: center;
     column-gap: 20px;
+    padding-inline: 32px;
 }
 
 .header-logo{
@@ -127,13 +128,36 @@ h1,h2,h3,h4,h5,h6{
 }
 
 .header-burger-button{
-    display: inline-flex;
+    display: flex;
+    flex-direction: column;
     justify-content: center;
-    align-items: center;
+    padding-left: 10px;
+    row-gap: 6px;
     width: 40px;
     height: 40px;
     color:white;
     background-color: transparent;
     border: var(--border);
     border-radius: var(--border-radius);
+}
+.header-burger-button-line {
+    width: 6px;
+    height: 1px;
+    background-color: currentColor;
+    box-shadow: 12px 0 0 currentColor;
+}
+.header-burger-button:hover{
+   color: var(--color-light-gray);
+    border-color: var(--color-light-gray);
+}
+
+@media (max-width: 1024px) {
+    .header{
+        flex-wrap: wrap;
+    }
+    .header-menu{
+        order: 1;
+        flex-basis: 100%;
+    }
+    .header-menu-link{}
 }
