--- a/prj1/style.css
+++ b/prj1/style.css
@@ -60,6 +60,15 @@ a{
 a:hover{
     color: var(--color-light-gray);
 }
+
+p{
+    margin-block: 0;
+}
+
+p:not([class]):not(:last-child) {
+    margin-bottom: 24px;
+}
+
 .container {
     max-width: calc(var(--container-width) + var(--container-padding-x) * 2);
     margin-inline: auto;
@@ -69,6 +78,12 @@ a:hover{
 h1,h2,h3,h4,h5,h6{
     font-weight: 700;
     text-transform: uppercase;
+}
+
+.title-medium{
+    font-size: clamp(20px, 2.08vw, 40px);
+    line-height: 1.3;
+    color: var(--color-light);
 }
 
 .visually-hidden{
@@ -95,8 +110,35 @@ h1,h2,h3,h4,h5,h6{
     text-transform: uppercase;
     letter-spacing: 1.2px;
     border:none;
+    background-color: var(--color-light);
     border-radius: var(--border-radius);
     white-space: nowrap;
+    text-decoration: none;
+}
+
+.button.transparent{
+    position: relative;
+    height: var(--input-height);
+    padding-left: 31px;
+    padding-right: 80px;
+    background-color: transparent;
+    border: var(--border);
+}
+
+.button.transparent::after{
+    content: '';
+    position: absolute;
+    right: 0;
+    height: 100%;
+    aspect-ratio: 1;
+    background: url("./icons/arrow_2.svg") center/70% no-repeat;
+    border: var(--border);
+    border-radius: 50%;
+}
+
+.button.transparent:hover{
+    color: var(--color-dark);
+    background-color: var(--color-light-gray);
 }
 
 .button:hover{
@@ -235,6 +277,71 @@ h1,h2,h3,h4,h5,h6{
     border-color: var(--color-light-gray);
     transition-duration: var(--transition-duration);
 }
+
+.motivation-item:nth-child(even){
+    background-color: var(--color-dark-altrenate);
+}
+.motivation-item:nth-child(even) .motivation-card{
+    flex-direction: row-reverse;
+}
+.motivation-card{
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    column-gap: clamp(30px, 10.42vw,200px);
+}
+
+
+.motivation-card-image{
+    margin-block: -60px;
+}
+
+.motivation-card-body{
+    padding-left: 35px;
+}
+.backdrop-title{
+    position: relative;
+    z-index: 2;
+}
+.motivation-card-title:not(:last-child){
+    margin-bottom: 14px;
+}
+.motivation-card-description:not(:last-child){
+    margin-bottom: 37px;
+}
+
+.backdrop-title::before{
+    content: "";
+    position: absolute;
+    right: calc(100% + 8px);
+    display: block;
+    width: 26px;
+    aspect-ratio: 1;
+    background: url("./icons/plus.svg") center/contain no-repeat;
+}
+
+.backdrop-title::after{
+    content: attr(data-title);
+    position: absolute;
+    z-index: -1;
+    top: -0.45em;
+    left: -0.6em;
+    font-size: 2.4em;
+    font-family: var(--font-family-accent);
+    color: transparent;
+    -webkit-text-stroke: 1px var(--color-light-gray);
+}
+
+.motivation-card-description {
+    max-width: 400px;
+}
+
+@media (max-width: 1919px) {
+    .motivation-card-image{
+        margin-block: -20px;
+    }
+}
+
 @media (max-width: 1024px) {
     .header{
         flex-wrap: wrap;
@@ -253,7 +360,16 @@ h1,h2,h3,h4,h5,h6{
         height: 50px;
     }
     .banner {
-        row-gap: 20px;
+        row-gap: 10px;
+    }
+
+    .motivation-card-image {
+        max-width: 30%;
+        height: auto;
+        margin-block: 0;
+    }
+    .motivation-card {
+        padding-block: 50px;
     }
 }
 
@@ -279,6 +395,21 @@ h1,h2,h3,h4,h5,h6{
     .banner-info{
         margin-bottom: 5px;
     }
+    .motivation-card,
+    .motivation-item:nth-child(even) .motivation-card{
+        flex-direction: column-reverse;
+    }
 
+    .motivation-card{
+        row-gap: 30px;
+        padding-block: 30px;
+    }
+
+    .motivation-card-image{
+        max-width: 60%;
+    }
+    .motivation-card-description:not(:last-child){
+        margin-bottom: 20px;
+    }
 }
 
