--- a/prj1/style.css
+++ b/prj1/style.css
@@ -84,7 +84,10 @@ h1,h2,h3,h4,h5,h6{
 .title-medium{
     font-size: clamp(20px, 2.08vw, 40px);
     line-height: 1.3;
-    color: var(--color-light);
+}
+.title-big{
+    font-size: clamp(24px, 3.12vw, 60px);
+    line-height: 1.2;
 }
 
 .visually-hidden{
@@ -98,6 +101,16 @@ h1,h2,h3,h4,h5,h6{
     clip-path: inset(100%); !important;
     clip: rect(0 0 0 0); !important;
     overflow: hidden; !important;
+}
+
+.input{
+    height: var(--input-height);
+    padding-inline: 25px;
+    width: 100%;
+    background-color: transparent;
+    border: 1px solid var(--color-light-gray);
+    border-radius: var(--border-radius);
+    color:var(--color-light)
 }
 
 .button{
@@ -304,6 +317,10 @@ h1,h2,h3,h4,h5,h6{
     position: relative;
     z-index: 2;
 }
+.backdrop-title.centered::after{
+    left: 50%;
+    translate: -50% 5%;
+}
 .motivation-card-title:not(:last-child){
     margin-bottom: 14px;
 }
@@ -364,12 +381,101 @@ h1,h2,h3,h4,h5,h6{
     font-size: 16px;
 }
 
+.join-us-video-wrapper{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 150px 300px;
+    background: url("./images/join-us/join-us-bg.jpg") center/cover no-repeat var(--color-dark-altrenate);
+}
 
+.join-us-video-play-button{
+    position: absolute;
+    top:50%;
+    left: 50%;
+    translate: -50% -50%;
+    width: 200px;
+    aspect-ratio: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: transparent;
+    border:var(--border);
+    border-radius: 50%;
+    color:var(--color-light);
+    font-size: 14px;
+    text-transform: uppercase;
+    font-weight: 700;
+    column-gap: 4px;
+}
 
+.join-us-video-play-button::after{
+    content: '';
+    width: 26px;
+    aspect-ratio: 1;
+    background: url("./icons/arrow_2.svg") center/contain no-repeat;
+    transition: var(--transition-duration);
+}
+.join-us-video-play-button:hover{
+    color: var(--color-dark);
+    border-color: var(--color-dark);
+}
+.join-us-video-play-button:hover::after{
+    filter: invert(100%);
+    transition: var(--transition-duration);
+}
 
+.join-us-body{
+    padding-bottom: 150px;
+}
 
+.join-us-title{
+    position: relative;
+    margin-top: -0.4em;
+    font-size: clamp(64px, 9.37vw, 180px);
+    line-height: 1;
+    text-align: center;
+}
 
+.join-us-title::after{
+    content: '';
+    display: inline-block;
+    height: 0.7em;
+    aspect-ratio: 1;
+    margin-left: 0.14em;
+    background: url("./icons/arrow.svg") center/contain no-repeat;
+    scale: 1 -1;
+}
+.join-us-title:not(:last-child) {
+    margin-bottom: 130px;
+}
 
+.join-us-form-header{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 7px;
+}
+
+.join-us-form-header:not(:last-child){
+    margin-bottom: 52px;
+}
+
+.join-us-form-subtitle{
+    font-size: 20px;
+    line-height: 1.6;
+    text-transform: uppercase;
+    color: var(--color-light);
+}
+
+.join-us-body-form{
+    display: flex;
+}
+
+.join-us-form-input{
+    max-width: 400px;
+}
 
 
 
