--- a/prj1/style.css
+++ b/prj1/style.css
@@ -112,6 +112,18 @@ h1,h2,h3,h4,h5,h6{
     border-radius: var(--border-radius);
     color:var(--color-light)
 }
+.input::placeholder{
+    color: var(--color-light-gray);
+}
+.input:hover{
+    border-color: var(--color-light);
+}
+
+.input:focus{
+    color: var(--color-dark);
+    background-color: var(--color-light-gray);
+    outline: none;
+}
 
 .button{
     display: inline-flex;
@@ -137,6 +149,7 @@ h1,h2,h3,h4,h5,h6{
     padding-right: 80px;
     background-color: transparent;
     border: var(--border);
+    color: var(--color-light);
 }
 
 .button.transparent::after{
@@ -342,12 +355,13 @@ h1,h2,h3,h4,h5,h6{
     content: attr(data-title);
     position: absolute;
     z-index: -1;
-    top: -0.45em;
+    top: -0.35em;
     left: -0.6em;
     font-size: 2.4em;
     font-family: var(--font-family-accent);
     color: transparent;
     -webkit-text-stroke: 1px var(--color-light-gray);
+    line-height: 1;
 }
 
 .motivation-card-description {
@@ -379,6 +393,10 @@ h1,h2,h3,h4,h5,h6{
 }
 .training-types-item-title{
     font-size: 16px;
+}
+
+.join-us{
+    background-color: var(--color-dark-altrenate);
 }
 
 .join-us-video-wrapper{
@@ -424,6 +442,11 @@ h1,h2,h3,h4,h5,h6{
 .join-us-video-play-button:hover::after{
     filter: invert(100%);
     transition: var(--transition-duration);
+}
+.join-us-video{
+    width: 100%;
+    max-width: 960px;
+    height: auto;
 }
 
 .join-us-body{
@@ -477,7 +500,37 @@ h1,h2,h3,h4,h5,h6{
     max-width: 400px;
 }
 
-
+.join-us-form-body{
+    display: flex;
+    justify-content: center;
+    column-gap: 20px;
+}
+.location{
+    max-width: 1920px;
+    margin-inline: auto;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+.location-body{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 80px 15px;
+    text-align: center;
+}
+.location-title:not(:last-child){
+    margin-bottom: 14px;
+}
+.location-description:not(:last-child){
+    margin-bottom: 37px;
+}
+.location-description{
+    max-width: 490px;
+}
+.location-map-image{
+    height: auto;
+}
 
 @media (max-width: 1919px) {
     .motivation-card-image{
@@ -519,6 +572,16 @@ h1,h2,h3,h4,h5,h6{
     }
     .motivation-card {
         padding-block: 50px;
+    }
+    .join-us-body{
+        padding-bottom: 80px;
+    }
+    .join-us-title:not(:last-child){
+        margin-bottom: 80px;
+    }
+    .location{
+        display: flex;
+        flex-direction: column-reverse;
     }
 }
 
@@ -571,5 +634,20 @@ h1,h2,h3,h4,h5,h6{
     .training-types-image{
         max-width: 120px;
     }
+    .join-us-video-play-button{
+        width: 140px;
+    }
+    .join-us-title:not(:last-child){
+        margin-bottom: 40px;
+    }
+    .join-us-form-body{
+        flex-direction: column;
+        align-items: center;
+        row-gap: 20px;
+    }
+    .join-us-form-subtitle{
+        font-size: 12px;
+    }
+
 }
 
