--- a/Prj3/styles/_utils.scss
+++ b/Prj3/styles/_utils.scss
@@ -18,9 +18,13 @@
 }
 
 .hidden-mobile{
-
+  @include mobile {
+    display: none !important;
+  }
 }
 
 .visible-mobile{
-
+  @include mobile-above{
+    display: none !important;
+  }
 }
