--- a/Prj3/styles/_globals.scss
+++ b/Prj3/styles/_globals.scss
@@ -1,5 +1,5 @@
 body {
-  @include fluid-text(18, 16)
+  @include fluid-text(18, 16);
 
   font-family: var(--font-family-base);
   font-weight: 400;
