adaptive header is done

--- a/Prj3/styles/style.scss
+++ b/Prj3/styles/style.scss
@@ -3,4 +3,6 @@
 @import
 "./blocks/button",
 "./blocks/burger-button",
-"./blocks/header";
+"./blocks/header",
+"./blocks/cross-button",
+"./blocks/mobile-overlay";
