--- a/Prj3/styles/blocks/_cross-button.scss
+++ b/Prj3/styles/blocks/_cross-button.scss
@@ -1,22 +1,31 @@
-.burger-button{
+.cross-button{
   @include reset-button;
   @include square(48px);
 
   position: relative;
+  border-radius: var(--border-radius-small);
 
-  @include hover{
+
+  &:hover{
     background-color: var(--color-accent);
-    border-radius: var(--border-radius-small);
   }
 
+  &::before,
   &::after{
-    @include abs-center;
-
     content: '';
+    position: absolute;
+    top: 50%;
+    left: 25%;
     width: 50%;
     height: 2px;
     background-color: var(--color-dark);
     border-radius: 5px;
-    box-shadow: 0 -8px, 0 8px ;
+  }
+
+  &::before{
+    rotate: 45deg;
+  }
+  &::after{
+    rotate: -45deg;
   }
 }
