--- a/Prj3/styles/style.scss
+++ b/Prj3/styles/style.scss
@@ -1,8 +1,10 @@
-@import "normalize", "fonts", "variables", "media", "mixins", "utils", "globals";
+@import "normalize", "fonts", "media", "variables", "mixins", "utils", "globals";
 
 @import
 "./blocks/button",
 "./blocks/burger-button",
 "./blocks/header",
 "./blocks/cross-button",
-"./blocks/mobile-overlay";
+"./blocks/mobile-overlay",
+"./blocks/section",
+"./blocks/hero";
