--- a/Prj3/styles/style.scss
+++ b/Prj3/styles/style.scss
@@ -1,10 +1,15 @@
 @import "normalize", "fonts", "media", "variables", "mixins", "utils", "globals";
 
 @import
+"./blocks/grid",
 "./blocks/button",
 "./blocks/burger-button",
 "./blocks/header",
 "./blocks/cross-button",
 "./blocks/mobile-overlay",
 "./blocks/section",
-"./blocks/hero";
+"./blocks/hero",
+"./blocks/puddlge-bg",
+"./blocks/banner",
+"./blocks/service-card",
+"./blocks/services";
