--- a/Prj3/styles/_utils.scss
+++ b/Prj3/styles/_utils.scss
@@ -7,16 +7,7 @@
 }
 
 .visually-hidden{
-  position: absolute !important;
-  width: 1px !important;
-  height: 1px !important;
-  margin: -1px !important;
-  padding: 0 !important;
-  border: 0 !important;
-  white-space: nowrap !important;
-  clip-path: inset(100%) !important;
-  clip: rect(0,0,0,0) !important;
-  overflow: hidden !important;
+  @include visually-hidden;
 }
 // Оптимальный способ сделать скрытый текст в блоке
 
