--- a/Prj3/styles/style.scss
+++ b/Prj3/styles/style.scss
@@ -12,4 +12,5 @@
 "./blocks/puddlge-bg",
 "./blocks/banner",
 "./blocks/service-card",
-"./blocks/services";
+"./blocks/services",
+"./blocks/studies";
