--- a/Prj3/styles/blocks/_studies.scss
+++ b/Prj3/styles/blocks/_studies.scss
@@ -12,6 +12,9 @@
 
   &__item{
     --studiesItemPaddingX: 64px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 
     &:not(:first-child){
       padding-left: var(--studiesItemPaddingX);
@@ -20,5 +23,15 @@
       padding-right: var(--studiesItemPaddingX);
       border-right: 1px solid var(--color-light);
     }
+  }
+
+  &__link {
+    display: inline-flex;
+    margin-top: 20px;
+    align-items: center;
+    column-gap: 15px;
+    font-size: 20px;
+    line-height: 1.4;
+    color: var(--color-accent);
   }
 }
