--- a/Prj3/styles/style.css
+++ b/Prj3/styles/style.css
@@ -849,6 +849,9 @@ h4 {
 }
 .studies__item {
   --studiesItemPaddingX: 64px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 .studies__item:not(:first-child) {
   padding-left: var(--studiesItemPaddingX);
@@ -856,6 +859,15 @@ h4 {
 .studies__item:not(:last-child) {
   padding-right: var(--studiesItemPaddingX);
   border-right: 1px solid var(--color-light);
+}
+.studies__link {
+  display: inline-flex;
+  margin-top: 20px;
+  align-items: center;
+  column-gap: 15px;
+  font-size: 20px;
+  line-height: 1.4;
+  color: var(--color-accent);
 }
 
 /*# sourceMappingURL=style.css.map */
