--- a/Prj3/styles/blocks/_studies.scss
+++ b/Prj3/styles/blocks/_studies.scss
@@ -1,13 +1,24 @@
 .studies{
-  padding: 70px 60px;
-  color: var(--color-light);
-  background-color: var(--color-dark);
-  border-radius: var(--border-radius-large);
-  font-size: 18px;
 
+  @include desktop-above{
+    padding: 70px 60px;
+  }
+  @include mobile-above{
+    padding: 40px;
+    color: var(--color-light);
+    background-color: var(--color-dark);
+    border-radius: var(--border-radius-large);
+  }
   &__list{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+
+    @include mobile{
+      scroll-snap-type: x mandatory;
+      overflow-x: scroll;
+      width: 100vw;
+      column-gap: 20px;
+    }
   }
 
   &__item{
@@ -16,12 +27,27 @@
     flex-direction: column;
     justify-content: space-between;
 
-    &:not(:first-child){
-      padding-left: var(--studiesItemPaddingX);
+    @include desktop{
+      --studiesItemPaddingX: 32px;
     }
-    &:not(:last-child){
-      padding-right: var(--studiesItemPaddingX);
-      border-right: 1px solid var(--color-light);
+
+    @include mobile-above{
+      &:not(:first-child){
+        padding-left: var(--studiesItemPaddingX);
+      }
+      &:not(:last-child){
+        padding-right: var(--studiesItemPaddingX);
+        border-right: 1px solid var(--color-light);
+      }
+    }
+
+    @include mobile{
+      min-width: 350px;
+      color: var(--color-light);
+      background-color: var(--color-dark);
+      border-radius: var(--border-radius-large);
+      padding: 42px 50px;
+      scroll-snap-align: start;
     }
   }
 
