--- a/Prj3/styles/style.css
+++ b/Prj3/styles/style.css
@@ -836,16 +836,30 @@ h4 {
   }
 }
 
-.studies {
-  padding: 70px 60px;
-  color: var(--color-light);
-  background-color: var(--color-dark);
-  border-radius: var(--border-radius-large);
-  font-size: 18px;
+@media (min-width: 1281px) {
+  .studies {
+    padding: 70px 60px;
+  }
+}
+@media (min-width: 768px) {
+  .studies {
+    padding: 40px;
+    color: var(--color-light);
+    background-color: var(--color-dark);
+    border-radius: var(--border-radius-large);
+  }
 }
 .studies__list {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+}
+@media (max-width: 767px) {
+  .studies__list {
+    scroll-snap-type: x mandatory;
+    overflow-x: scroll;
+    width: 100vw;
+    column-gap: 20px;
+  }
 }
 .studies__item {
   --studiesItemPaddingX: 64px;
@@ -853,12 +867,29 @@ h4 {
   flex-direction: column;
   justify-content: space-between;
 }
-.studies__item:not(:first-child) {
-  padding-left: var(--studiesItemPaddingX);
+@media (max-width: 1280px) {
+  .studies__item {
+    --studiesItemPaddingX: 32px;
+  }
 }
-.studies__item:not(:last-child) {
-  padding-right: var(--studiesItemPaddingX);
-  border-right: 1px solid var(--color-light);
+@media (min-width: 768px) {
+  .studies__item:not(:first-child) {
+    padding-left: var(--studiesItemPaddingX);
+  }
+  .studies__item:not(:last-child) {
+    padding-right: var(--studiesItemPaddingX);
+    border-right: 1px solid var(--color-light);
+  }
+}
+@media (max-width: 767px) {
+  .studies__item {
+    min-width: 350px;
+    color: var(--color-light);
+    background-color: var(--color-dark);
+    border-radius: var(--border-radius-large);
+    padding: 42px 50px;
+    scroll-snap-align: start;
+  }
 }
 .studies__link {
   display: inline-flex;
